--- a/medicalstore/templates/pages/contact.html
+++ b/medicalstore/templates/pages/contact.html
@@ -139,7 +139,7 @@
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">{% trans "Email" %}</h3>
-                                <p class="text-gray-600">info@greenleafwellness.com</p>
+                                <p class="text-gray-600">info@greenhousescbd.com</p>
                                 <p class="text-sm text-gray-500">{% trans "We respond within 24 hours" %}</p>
                             </div>
                         </div>
